--- a/static/main.css
+++ b/static/main.css
@@ -200,16 +200,16 @@ button.connection-id{
 .video-wrapper>.video-container{
   flex:1;
   display: flex;
-  width:100%;
+  height:100%;
   background-color: rgb(0,0,0);
 }
 
 .video-wrapper>.video-container>video{
-  width:100%;
+  height:100%;
 }
 
 .video-wrapper>.video-container>.no-video{
-  width:100%;
+  height:100%;
   display: flex;
   align-items: center;
   justify-content: center;
